# yottalert

./: .aether-initialized  .aether-template  .editorconfig  .env.codesign  .env.codesign.example  .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  DESIGN.md  README.md  app.vue  broadchurch.yaml  broadchurch.yaml.template  init-project.js  nuxt.config.ts  package-lock.json  package.json  setup-prettier-hooks.sh  types.d.ts  vercel.json
.agents/: .aether-data-mode  .aether-instructions-manifest  Dockerfile  README.md  environment.json  mcp.json
agents/: broadchurch_auth.py  pyproject.toml
agents/example_agent/: __init__.py  agent.py  requirements.txt
agents/tests/: conftest.py  test_agent_connectivity.py  test_broadchurch_auth.py
assets/: brand-globals.css  fonts.css  theme-styles.css
components/: AppHeader.vue  ChatMessage.vue  NotificationContainer.vue  PageHeader.vue  ServerStatus.vue  ServerStatusFooter.vue  SettingsDialog.vue  ThemePresetPicker.vue
composables/: useAetherLearnings.ts  useAgentChat.ts  useAppInfo.ts  useElementalSchema.ts  useElementalStatus.ts  useLovelaceTheme.ts  useMcpExplorer.ts  useNotification.ts  usePrefsStore.ts  useProxiedAvatar.ts  useRouteQuery.ts  useRuleFeedback.ts  useServerStatus.ts  useSession.ts  useTenantConfig.ts  useThemeClasses.ts  useUserState.ts  useYottalert.ts
design/: design_template.md  feature_template.md  requirements.md
middleware/: auth-callback.js  logout.ts  watch-area.global.ts  watchdog.global.ts
pages/: a0callback.vue  chat.vue  entity-lookup.vue  index.vue  login.vue  logout.vue  (+2 more)
(+187 files in other folders)
